Create basic HTML structure
Basic html and adding pictures used in project

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="bg-img">
+        <div class="logo">
+
+        </div>
+    </div>
+    <div id="txt-section">
+        <div class="text desc">
+
+        </div>
+        <div class="text form-section">
+
+        </div>
+        <div class="text btn">
+
+        </div>
+    </div>
+
     
 </body>
 </html>
