Fill out HTML with information
Create basic form, and add some information
to the site so styling with vanilla css
can begin

--- a/index.html
+++ b/index.html
@@ -9,18 +9,57 @@
 </head>
 <body>
     <div id="bg-img">
+
         <div class="logo">
 
         </div>
     </div>
     <div id="txt-section">
         <div class="text desc">
+            <h2>Hi! This is not a real online service. It is a sign-up form project that u need to fill.
+                Please  sign up <em>now</em> to my imaginary service.
+            </h2>
+            <h2>
+                You <em>know</em> you want to!
+            </h2>
 
         </div>
         <div class="text form-section">
+            <form action="">
+                <h3>Please fill out this form!</h3>
+                <ul>
+                    <li>
+                        <label for="firstName">First Name</label>
+                        <input type="text" id="firstName" name="user-firstName">
+                    </li>
+                    <li>
+                        <label for="lastName">Last Name</label>
+                        <input type="text" id="lastName" name="user-lastName">
+                    </li>
+                    <li>
+                        <label for="mail">Email</label>
+                        <input type="email" id="mail" name="user-mail">
+                    </li>
+                    <li>
+                        <label for="phoneNumber">Phone number</label>
+                        <input type="tel" id="phoneNumber" name="user-phoneNumber">
+                    </li>
+                    <li>
+                        <label for="password">Password</label>
+                        <input type="password" id="password" name="user-password">
+                    </li>
+                    <li>
+                        <label for="confirmPassword">Confirm Password</label>
+                        <input type="password" id="confirmPassword">
+                    </li>
+                </ul>
+
+            </form>
 
         </div>
         <div class="text btn">
+            <button type="submit" class="createAcc">Create Account</button>
+            <p>Already have an account?<span class="logIn">Log in</span></p>
 
         </div>
     </div>
