--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div id="bg-img">
 
         <div class="logo">
-
+                <img src="./images/night-g181bed698_640.png" alt="LogoType">
+                <div class="txtLogo"> GBN6 </div>
+            </div>
         </div>
     </div>
     <div id="txt-section">
