Text section styling
Add description section styling, additional box shadow
and scale logo text + img logo

--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 </head>
 <body>
     <div id="bg-img">
-
         <div class="logo">
-                <img src="./images/night-g181bed698_640.png" alt="LogoType">
-                <div class="txtLogo"> GBN6 </div>
+                <img  class="logo-img"  src="./images/night-g181bed698_640.png" alt="LogoType">
+                <h1>GBN6</h1>
             </div>
         </div>
     </div>
     <div id="txt-section">
-        <div class="text desc">
-            <h2>Hi! This is not a real online service. It is a sign-up form project that u need to fill.
-                Please  sign up <em>now</em> to my imaginary service.
-            </h2>
-            <h2>
-                You <em>know</em> you want to!
-            </h2>
-
+        <div class="text-container desc">
+            <div class="description">
+                <h2>Hi! This is not a real online service. It is a sign-up form project that u need to fill.
+                    Please  sign up <em>now</em> to my imaginary service.
+                </h2>
+                <h2>
+                    You <em>know</em> you want to!
+                </h2>
+            </div>
         </div>
-        <div class="text form-section">
+        <div class="text-container form-section">
             <form action="">
                 <h3>Please fill out this form!</h3>
                 <ul>
@@ -59,7 +59,7 @@
             </form>
 
         </div>
-        <div class="text btn">
+        <div class="text-container btn">
             <button type="submit" class="createAcc">Create Account</button>
             <p>Already have an account?<span class="logIn">Log in</span></p>
 
