Fix box-shadow, add more styling

--- a/index.html
+++ b/index.html
@@ -55,13 +55,15 @@
                         <input type="password" id="confirmPassword">
                     </li>
                 </ul>
+                <div class="btn-txt">
+                    <button type="submit" class="createAcc">Create Account</button>
+                    <p>Already have an account?<span class="logIn"> Log in</span></p>
+                </div>
 
             </form>
 
         </div>
         <div class="text-container btn">
-            <button type="submit" class="createAcc">Create Account</button>
-            <p>Already have an account?<span class="logIn"> Log in</span></p>
         </div>
     </div>
 
