--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div id="bg-img">
         <div class="logo">
-                <img  class="logo-img"  src="./images/night-g181bed698_640.png" alt="LogoType">
-                <h1>GBN6</h1>
+                <img  class="logo-img"  src="./images/star-4-512.png" alt="LogoType">
+                <h1>JOIN!</h1>
             </div>
         </div>
     </div>
@@ -32,11 +32,11 @@
                 <ul>
                     <li>
                         <label for="firstName">First Name</label>
-                        <input type="text" id="firstName" name="user-firstName">
+                        <input type="text" id="firstName"  minlength="2" maxlength="15"  name="user-firstName">
                     </li>
                     <li>
                         <label for="lastName">Last Name</label>
-                        <input type="text" id="lastName" name="user-lastName">
+                        <input type="text" id="lastName" minlength="2" maxlength="15" name="user-lastName">
                     </li>
                     <li>
                         <label for="mail">Email</label>
@@ -44,7 +44,7 @@
                     </li>
                     <li>
                         <label for="phoneNumber">Phone number</label>
-                        <input type="tel" id="phoneNumber" name="user-phoneNumber">
+                        <input type="tel" id="phoneNumber" min="9" max="9" placeholder="123456789" name="user-phoneNumber">
                     </li>
                     <li>
                         <label for="password">Password</label>
