Add error class to password input

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                     </li>
                     <li>
                         <label for="password">Password</label>
-                        <input type="password" id="password" name="user-password">
+                        <input class="error" type="password" id="password" name="user-password">
                     </li>
                     <li>
                         <label for="confirmPassword">Confirm Password</label>
-                        <input type="password" id="confirmPassword">
+                        <input class="error" type="password" id="confirmPassword">
                     </li>
                 </ul>
                 <div class="btn-txt">
