--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="bg-img">
         <div class="logo">
                 <img  class="logo-img"  src="./images/star-4-512.png" alt="LogoType">
-                <h1>JOIN!</h1>
+                <h1>Night Sky</h1>
             </div>
         </div>
     </div>
