Add error message styling

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                     </li>
                     <li>
                         <label for="password">Password <abbr title="This field is mandatory" aria-label="required">*</abbr> </label>
-                        <input class="error" type="password" id="password" name="user-password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" required>
+                        <input type="password" id="password" name="user-password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" required>
                         <div id='password-error' class='error'></div>
                     </li>
                     <li>
                         <label for="confirmPassword">Confirm Password <abbr title="This field is mandatory" aria-label="required">*</abbr> </label>
-                        <input class="error" type="password" id="confirmPassword" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" required>
+                        <input type="password" id="confirmPassword" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" required>
                         <div id='password-confirm-error' class='error'></div>
                     </li>
                 </ul>
