Add matching password function
Added a function that check if typed
passwords match each other

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </ul>
                 <div class="btn-txt">
                     <button type="submit" class="createAcc">Create Account</button>
-                    <p>Already have an account?<span class="logIn"> Log in</span></p>
+                    <p>Already have an account?<span class="logIn"><a href="#"> Log in</a></span></p>
                 </div>
 
             </form>
